@@ -23,3 +23,7 @@ acl=PRIVATE
 # WARNING: Be careful enabling this option, as it could cause legitimate objects in S3 to be
 # deleted if the corresponding local files cannot be found or read.
 #upload.ignoreMissingPaths=true
+
+# Maximum number of files to transform and upload at a time, when file transformation is
+# required (eg. when files are gzipped or encrypted during synchronization).  
+upload.transformed-files-batch-size=1000
